--- a/style.css
+++ b/style.css
@@ -1,11 +1,56 @@
-.container {
-  width: 768px;
-  margin: auto;
-  display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto";
 }
 
-.controls {
-  margin-left: 20px;
+body {
+  background-color: #fff;
+}
+
+.container {
+  width: 640px;
+  margin: auto;
+  display: flex;
+  margin-top: 10px;
+}
+
+aside {
+  flex: 1;
+  padding: 20px;
+  background-color: #ccc;
+}
+
+.controls button {
+  width: 100%;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 5px;
+  color: #fff;
+  border: none;
+  transition: 0.3s;
+  background-color: #8a46f0;
+}
+
+.controls button:hover {
+  opacity: 0.7;
+}
+
+.controls button.disabled {
+  opacity: 0.4;
+  pointer-events: none;
+}
+
+.panel p {
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.panel p span {
+  display: block;
+  text-align: center;
 }
 
 .board {
@@ -17,10 +62,10 @@ tr {
 }
 
 td {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   text-align: center;
-  border: 5px solid #402170;
+  border: 4px solid #402170;
 }
 
 .snake {
