--- a/style.css
+++ b/style.css
@@ -126,3 +126,31 @@ td {
     font-size: 1rem;
   }
 }
+
+@media (max-width: 500px) {
+  .container {
+    display: block;
+    max-width: 100%;
+  }
+  .board {
+    width: 100%;
+    height: 100vw;
+  }
+  aside {
+    margin-top: 10px;
+  }
+  .panel {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .panel p {
+    display: flex;
+    margin-right: 10px;
+  }
+  .panel p {
+    flex-direction: row-reverse;
+  }
+  .panel p span {
+    margin-left: 5px;
+  }
+}
